[package]
name = "moonbit-wasm-runner"
version = "1.2.0"
edition = "2024"
authors = ["Abhishek Kumar <abhishek.kumar.thakur@zohomail.in>"]
license = "MIT"
description = "Flexible CLI tool to run MoonBit‑generated WebAssembly modules using Wasmtime"
readme = "README.md"
homepage = "https://github.com/isurfer21/moonbit-wasm-runner"
repository = "https://github.com/isurfer21/moonbit-wasm-runner.git"
keywords = ["cli", "moonbit", "webassembly", "runner", "wasmtime"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.53"
wasmtime = "39.0.1"

[[bin]]
name = "mbwr"
path = "src/main.rs"